[package]
name = "demoterm"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
ctrlc = "3.4.5"
gif = "0.13.1"
image = "0.25.2"
nix = "0.29.0"
portable-pty = "0.8.1"
rusttype = "0.9.3"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
